--- a/Lab3_Demo/Lab3_Demo.csproj
+++ b/Lab3_Demo/Lab3_Demo.csproj
@@ -52,12 +52,21 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmTuyChon.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTuyChon.Designer.cs">
+      <DependentUpon>frmTuyChon.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuanLySinhVien.cs" />
     <Compile Include="SinhVien.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTuyChon.resx">
+      <DependentUpon>frmTuyChon.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
